Reformat (n+4)
Half way through