@@ -1,207 +1,165 @@
 package vn.edu.haui.scheduler.application.service;
 
+import java.io.IOException;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
+import vn.edu.haui.scheduler.application.exception.EntityNotFoundException;
+import vn.edu.haui.scheduler.application.exception.ExportDanhSachLopException;
+import vn.edu.haui.scheduler.application.exception.UnauthorizedAccessException;
+import vn.edu.haui.scheduler.application.exception.ValidationException;
 import vn.edu.haui.scheduler.application.port.in.ExportDanhSachLopUseCase;
 import vn.edu.haui.scheduler.application.port.out.DanhSachLopRepository;
-import vn.edu.haui.scheduler.application.port.out.FileExporter;
+import vn.edu.haui.scheduler.application.port.out.NguoiDungRepository;
 import vn.edu.haui.scheduler.domain.model.DanhSachLop;
 import vn.edu.haui.scheduler.domain.model.DanhSachLopChiTiet;
-import vn.edu.haui.scheduler.domain.model.GiangVien;
-import vn.edu.haui.scheduler.domain.model.HocPhan;
 import vn.edu.haui.scheduler.domain.model.LichHoc;
 import vn.edu.haui.scheduler.domain.model.LopHocPhan;
-import vn.edu.haui.scheduler.application.exception.DataAccessException;
-import vn.edu.haui.scheduler.application.exception.ValidationException;
-import vn.edu.haui.scheduler.infrastructure.io.exports.CsvExporter;
-import vn.edu.haui.scheduler.infrastructure.io.exports.ExcelExporter;
-import vn.edu.haui.scheduler.application.dto.DanhSachLopDto;
-import vn.edu.haui.scheduler.application.dto.DanhSachLopChiTietDto;
-import vn.edu.haui.scheduler.application.dto.LichHocDto;
-
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.*;
+import vn.edu.haui.scheduler.domain.model.NguoiDung;
+import vn.edu.haui.scheduler.infrastructure.io.exports.CompositeFileExporter;
+import vn.edu.haui.scheduler.infrastructure.io.exports.FileExporter;
 
 public class ExportDanhSachLopService implements ExportDanhSachLopUseCase
 {
+	private final DanhSachLopRepository danhSachLopRepository;
 
-	private final DanhSachLopRepository danhSachRepo;
+	private final NguoiDungRepository nguoiDungRepository;
 
 	private final FileExporter fileExporter;
 
 	public ExportDanhSachLopService(
-			DanhSachLopRepository danhSachRepo,
-			FileExporter fileExporter)
+			DanhSachLopRepository danhSachLopRepository,
+			NguoiDungRepository nguoiDungRepository,
+			CompositeFileExporter fileExporter)
 	{
-		this.danhSachRepo = danhSachRepo;
+		this.danhSachLopRepository = danhSachLopRepository;
+		this.nguoiDungRepository = nguoiDungRepository;
 		this.fileExporter = fileExporter;
 	}
 
 	@Override
-	public void exportDanhSachLop(
+	public void exportDanhSach(
 			Long nguoiDungId,
-			Long danhSachId,
-			String duongDanFile,
-			String dinhDang)
-			throws ValidationException, DataAccessException
+			Long danhSachLopId,
+			String format,
+			String outputPath)
 	{
 		if(nguoiDungId == null)
-			throw new ValidationException("Người dùng không hợp lệ.");
+			throw new ValidationException("NguoiDungId must not be null");
 
-		if(danhSachId == null)
-			throw new ValidationException("Danh sách lớp không hợp lệ.");
+		if(danhSachLopId == null)
+			throw new ValidationException("DanhSachLopId must not be null");
 
-		if(duongDanFile == null || duongDanFile.trim().isEmpty())
-			throw new ValidationException("Đường dẫn file không hợp lệ.");
+		if(format == null || format.isBlank())
+			throw new ValidationException("Format must not be blank");
+
+		if(outputPath == null || outputPath.isBlank())
+			throw new ValidationException("OutputPath must not be blank");
+
+		NguoiDung nguoiDung = nguoiDungRepository
+				.findById(nguoiDungId)
+				.orElseThrow(() -> new EntityNotFoundException("NguoiDung", nguoiDungId));
+
+		DanhSachLop danhSach = danhSachLopRepository
+				.findById(danhSachLopId)
+				.orElseThrow(() -> new EntityNotFoundException("DanhSachLop", danhSachLopId));
+
+		if(!danhSach.isLaCongKhai() &&
+				!danhSach.getNguoiTao().getId().equals(nguoiDung.getId())) {
+			throw new UnauthorizedAccessException("You are not allowed to export this DanhSachLop");
+		}
+
+		List<String> headers = buildHeaders();
+		List<Map<String, String>> rows = buildRows(danhSach);
 
 		try {
+			Path path = Path.of(outputPath);
 
-			DanhSachLop entity = danhSachRepo.findByIdWithDetails(danhSachId)
-					.orElseThrow(() -> new ValidationException("Không tìm thấy danh sách lớp."));
+			String normalized = format.trim().toUpperCase();
 
-			if(entity.getNguoiTao() == null || !entity.getNguoiTao().getId().equals(nguoiDungId))
+			switch(normalized) {
+				case "CSV" -> fileExporter.exportCsv(path, headers, rows);
 
-				throw new ValidationException("Không có quyền xuất danh sách này.");
+				case "EXCEL" -> fileExporter.exportExcel(path, headers, rows);
 
-			DanhSachLopDto ds = mapToDto(entity);
+				case "PDF" -> fileExporter.exportPdf(
+						path,
+						"Danh sách lớp học phần",
+						headers,
+						rows);
 
-			List<String> headers = Arrays.asList(
-					"ten_danh_sach",
-					"ma_lop",
-					"ma_hoc_phan",
-					"ten_hoc_phan",
-					"so_tin_chi",
-					"ten_giang_vien",
-					"hinh_thuc_day",
-					"dia_diem",
-					"thu",
-					"tiet_bat_dau",
-					"tiet_ket_thuc",
-					"bat_buoc");
-
-			List<Map<String, String>> rows = new ArrayList<>();
-
-			List<DanhSachLopChiTietDto> chiTiets = ds.getChiTiet() == null ? Collections.emptyList() : ds.getChiTiet();
-
-			for(DanhSachLopChiTietDto ct : chiTiets) {
-
-				List<LichHocDto> lichs = ct.getLichHoc() == null ? Collections.emptyList() : ct.getLichHoc();
-
-				if(lichs.isEmpty()) {
-					rows.add(buildRow(ds, ct, null));
-				}
-				else {
-					for(LichHocDto lich : lichs) {
-						rows.add(buildRow(ds, ct, lich));
-					}
-				}
+				default -> throw new ValidationException("Định dạng Export khong được hỗ trợ: " + format);
 			}
-
-			Path output = Paths.get(duongDanFile);
-
-			String fmt = dinhDang == null ? "CSV" : dinhDang.trim().toUpperCase();
-
-			boolean isExcel = "EXCEL".equals(fmt)
-					|| duongDanFile.toLowerCase().endsWith(".xlsx");
-
-			if(isExcel) {
-				fileExporter.exportExcel(output, headers, rows);
-			}
-			else {
-				fileExporter.exportCsv(output, headers, rows);
-			}
-
 		}
-		catch(ValidationException e) {
-			throw e;
-		}
-		catch(Exception e) {
-			throw new DataAccessException("Lỗi khi xuất dữ liệu.", e);
+		catch(IOException e) {
+			throw new ExportDanhSachLopException("Error exporting file", e);
 		}
 	}
 
-	private String safe(String v)
+	private List<String> buildHeaders()
 	{
-		return v == null ? "" : v;
+		List<String> headers = new ArrayList<>();
+
+		headers.add("Ma Lop");
+		headers.add("Ma Hoc Phan");
+		headers.add("Ten Hoc Phan");
+		headers.add("Giang Vien");
+		headers.add("Hinh Thuc Day");
+		headers.add("Dia Diem");
+		headers.add("Lich Hoc");
+
+		return headers;
 	}
 
-	private DanhSachLopDto mapToDto(DanhSachLop entity)
+	private List<Map<String, String>> buildRows(DanhSachLop danhSach)
 	{
-		List<DanhSachLopChiTietDto> chiTietDtos = new ArrayList<>();
+		List<Map<String, String>> rows = new ArrayList<>();
 
-		for(DanhSachLopChiTiet ct : entity.getChiTietList()) {
+		for(DanhSachLopChiTiet chiTiet : danhSach.getChiTietList()) {
 
-			LopHocPhan lhp = ct.getLopHocPhan();
-			HocPhan hp = lhp.getHocPhan();
-			GiangVien gv = lhp.getGiangVien();
+			LopHocPhan lop = chiTiet.getLopHocPhan();
 
-			List<LichHocDto> lichDtos = new ArrayList<>();
+			Map<String, String> row = new HashMap<>();
 
-			if(lhp.getDanhSachLichHoc() != null) {
-				for(LichHoc lich : lhp.getDanhSachLichHoc()) {
-					lichDtos.add(new LichHocDto(
-							lich.getThu(),
-							lich.getTietBatDau(),
-							lich.getTietKetThuc()));
-				}
-			}
+			row.put("Ma Lop", safe(lop.getMaLop()));
+			row.put("Ma Hoc Phan", safe(lop.getHocPhan().getMaHocPhan()));
+			row.put("Ten Hoc Phan", safe(lop.getHocPhan().getTenHocPhan()));
+			row.put("Giang Vien",
+					lop.getGiangVien() != null
+							? lop.getGiangVien().getTenGiangVien()
+							: "");
+			row.put("Hinh Thuc Day", safe(lop.getHinhThucDay()));
+			row.put("Dia Diem", safe(lop.getDiaDiem()));
+			row.put("Lich Hoc", buildLichHocString(lop));
 
-			DanhSachLopChiTietDto dto = new DanhSachLopChiTietDto(
-					lhp.getId(),
-					lhp.getMaLop(),
-					hp.getMaHocPhan(),
-					hp.getTenHocPhan(),
-					hp.getSoTinChi(),
-					gv == null ? "" : gv.getTenGiangVien(),
-					lhp.getHinhThucDay().name(),
-					lhp.getDiaDiem(),
-					lichDtos,
-					ct.isBatBuoc() ? 1 : 0);
-
-			chiTietDtos.add(dto);
+			rows.add(row);
 		}
 
-		return new DanhSachLopDto(
-				entity.getId(),
-				entity.getTenDanhSach(),
-				entity.getNguoiTao() == null ? null : entity.getNguoiTao().getId(),
-				entity.isCongKhai() ? 1 : 0,
-				entity.getHocKy() == null ? null : entity.getHocKy().getId(),
-				entity.getNgayTao(),
-				chiTietDtos);
+		return rows;
 	}
 
-	private Map<String, String> buildRow(
-			DanhSachLopDto ds,
-			DanhSachLopChiTietDto ct,
-			LichHocDto lich)
+	private String buildLichHocString(LopHocPhan lop)
 	{
-		Map<String, String> row = new LinkedHashMap<>();
+		StringBuilder sb = new StringBuilder();
 
-		row.put("ten_danh_sach", safe(ds.getTenDanhSach()));
-		row.put("ma_lop", safe(ct.getMaLop()));
-		row.put("ma_hoc_phan", safe(ct.getMaHocPhan()));
-		row.put("ten_hoc_phan", safe(ct.getTenHocPhan()));
-		row.put("so_tin_chi", ct.getSoTinChi() == null ? "" : ct.getSoTinChi().toString());
-		row.put("ten_giang_vien", safe(ct.getTenGiangVien()));
-		row.put("hinh_thuc_day", safe(ct.getHinhThucDay()));
-		row.put("dia_diem", safe(ct.getDiaDiem()));
-
-		if(lich != null) {
-			row.put("thu", lich.getThu() == null ? "" : lich.getThu().toString());
-			row.put("tiet_bat_dau", lich.getTietBatDau() == null ? "" : lich.getTietBatDau().toString());
-			row.put("tiet_ket_thuc", lich.getTietKetThuc() == null ? "" : lich.getTietKetThuc().toString());
-		}
-		else {
-			row.put("thu", "");
-			row.put("tiet_bat_dau", "");
-			row.put("tiet_ket_thuc", "");
+		for(LichHoc lh : lop.getLichHocList()) {
+			sb.append("Thu ")
+					.append(lh.getThu())
+					.append(" (")
+					.append(lh.getTietBatDau())
+					.append("-")
+					.append(lh.getTietKetThuc())
+					.append("); ");
 		}
 
-		row.put("bat_buoc",
-				ct.getBatBuoc() == null
-						? ""
-						: (ct.getBatBuoc() == 1 ? "1" : "0"));
+		return sb.toString().trim();
+	}
 
-		return row;
+	private String safe(String value)
+	{
+		return value == null ? "" : value;
 	}
 }
